--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -192,7 +193,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2>$199 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -210,11 +211,12 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+  <section class=container id="cta">
+    <h3 id="cta-title">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" id="cta-btn" class="download-btn btn-dark btn-lg"><i class="fa fa-apple"
+        aria-hidden="true"></i>Download</button>
+    <button type="button" id="cta-btn" class="download-btn btn-light btn-lg"><i class="fa fa-windows"
+        aria-hidden="true"></i>Download</button>
 
   </section>
 
@@ -222,7 +224,12 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <div id="footer-icons">
+      <i class="fa fa-twitter" aria-hidden="true"></i>
+      <i class="fa fa-facebook-square" aria-hidden="true"></i>
+      <i class="fa fa-instagram" aria-hidden="true"></i>
+      <i class="fa fa-envelope-o" aria-hidden="true"></i>
+    </div>
     <p>© Copyright TinDog</p>
 
   </footer>
