--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#title">What is TinDog?</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#footer">Download</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
           </ul>
         </div>
